samples/_failures_safe/1761453762_8c105f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_304a594c.c: In function ‘main’:
./samples/SAFE/__tmp_304a594c.c:158:9: error: expected declaration or statement at end of input
  158 |         choice = read_int("Choose operation (1-5): ", 1, 5);
      |         ^~~~~~
./samples/SAFE/__tmp_304a594c.c:158:9: error: expected declaration or statement at end of input
